--- a/ByteMarket/backend/src/main/resources/templates/editProfile.html
+++ b/ByteMarket/backend/src/main/resources/templates/editProfile.html
@@ -9,8 +9,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/homeStyle.css">
-    <link rel="stylesheet" href="/css/headerStyle.css">
+        <link rel="stylesheet" href="/css/profileStyle.css">
+        <link rel="stylesheet" href="/css/editProfile.css">
+        <link rel="stylesheet" href="/css/headerStyle.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <title>ByteMarket</title>
 </head>
@@ -22,7 +23,12 @@
 
         <div class="profile-pic-wrapper">
             <label for="profilePicInput">
-                <img src="../public/defaul-pfp.jpg" class="profile-pic mb-3" alt="Foto de perfil">
+                {{#image}}
+                <img class="profile-pic mb-3" src="/user/{{id}}/image" alt="pfp">
+                {{/image}}
+                {{^image}}
+                <img class="profile-pic mb-3" src="/images/default_pfp.jpg" alt="pfp">
+                {{/image}}
                 <span class="edit-icon">
                     <img src="https://cdn-icons-png.flaticon.com/512/1250/1250615.png" alt="Editar">
                 </span>
@@ -30,17 +36,17 @@
         </div>
         <input type="file" id="profilePicInput" class="file-input" accept="image/*">
 
-        <form>
+        <form class="form" method="POST" action="/editProfile" enctype="multipart/form-data">
             <div class="mb-3 text-start">
-                <label class="form-label">{{username}}</label>
-                <input type="text" class="form-control" value="Usuario Ejemplo" title="Usuario">
+                <label class="form-label">Nombre</label>
+                <input type="text" class="form-control" value="{{user.name}}" title="Usuario">
             </div>
             <div class="mb-3 text-start">
-                <label class="form-label">{{email}}</label>
-                <input type="email" class="form-control" value="usuario@email.com" title="Correo">
+                <label class="form-label">Correo</label>
+                <input type="email" class="form-control" value="{{user.mail}}" title="Correo">
             </div>
             <div class="mb-3 text-start">
-                <label class="form-label">{{location}}</label>
+                <label class="form-label">Ubicación</label>
                 <input type="text" class="form-control" value="Madrid, España" title="Ubicacion">
             </div>
             <div class="mb-3 text-start">
@@ -51,13 +57,8 @@
                 <label class="form-label">Confirmar Contraseña</label>
                 <input type="password" class="form-control" title="Contraseña">
             </div>
-            <button type="submit" class="btn btn-custom w-100">Guardar Cambios</button>
-            <a href="#" class="btn-delete">Eliminar cuenta</a>
-            <div>
-                <button class="btn btn-outline-dark btn-custom headerButton" type="button" onclick="window.location.href='home_template.html'">
-                    <i class="fas fa-sign-out-alt"></i> Cerrar sesión
-                </button>
-            </div>
+            <button type="submit" class="btn btn-custom w-100 mb-2">Guardar Cambios</button>
+            <a href="#" class="btn btn-custom w-100 mb-2">Eliminar cuenta</a>
         </form>
     </div>
 </div>
