--- a/ByteMarket/backend/src/main/resources/templates/newProduct.html
+++ b/ByteMarket/backend/src/main/resources/templates/newProduct.html
@@ -36,11 +36,10 @@
                 <label for="category" class="form-label">Categoría</label>
                 <select class="form-select" id="category" name="category" required>
                     <option value="">Seleccione una categoría</option>
-                    <option value="Electrónica">Móviles</option>
-                    <option value="Móvil">Ordenadores</option>
-                    <option value="Ordenador">Tablets</option>
-                    <option value="Videojuegos">Auriculares</option>
-                    <option value="Videojuegos">Smartwatches</option>
+                    <option value="Electrónica">Electrónica</option>
+                    <option value="Móvil">Móvil</option>
+                    <option value="Ordenador">Ordenador</option>
+                    <option value="Videojuegos">Videojuegos</option>
                     <option value="Otros">Otros</option>
                 </select>
             </div>
