--- a/ByteMarket/backend/src/main/resources/templates/signin_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/signin_template.html
@@ -36,22 +36,22 @@
             <div class="mb-3">
 
                 <label for="fullName" class="form-label">Nombre Completo</label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="Juan Pérez" required>
+                <input type="text" class="form-control" id="name" name="name" placeholder="Juan Pérez">
                 <div id="errorName" class="ocult"></div>
             </div>
             <div class="mb-3">
                 <label for="registerUsername" class="form-label">Correo Electrónico</label>
-                <input type="text" class="form-control" id="mail" name="mail" placeholder="ejemplo@correo.com" required>
+                <input type="text" class="form-control" id="mail" name="mail" placeholder="ejemplo@correo.com">
                 <div id="errorMail" class="ocult"></div>
             </div>
             <div id="errorPassword" class="ocult"></div>
             <div class="mb-3">
                 <label for="registerPassword" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="password" name="encodedPassword" required>
+                <input type="password" class="form-control" id="password" name="encodedPassword">
             </div>
             <div class="mb-3">
                 <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
-                <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required/>
+                <input type="password" class="form-control" id="confirmPassword" name="confirmPassword"/>
             </div>
             <!-- Campo oculto para asignar un rol por defecto -->
             <input type="hidden" name="roles" value="USER">
