--- a/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
@@ -34,11 +34,42 @@
                 <p class="text-muted">Publicado el {{product.publishDate}}</p>
                 <p>{{product.description}}</p>
                 <div class="d-grid gap-2">
-                    <button class="btn btn-custom"><i class="bi bi-chat-fill m-2"></i>Contactar con el vendedor</button>
-                    <form action="/product/{{product.id}}" method="post">
-                        <button type="submit" class="btn btn-custom"><i class="bi bi-heart m-2" style="color: white;"></i>Añadir a favoritos</button>
-                        <input type="hidden" name="_csrf" value="{{token}}"/>
-                    </form>
+                    <div class="d-grid gap-2">
+                        {{#isOwner}}
+                            <a href="/product/edit/{{product.id}}" class="btn btn-custom">
+                                <i class="bi bi-pencil-square m-2"></i>Editar Producto
+                            </a>
+                            <a href="/product/delete/{{product.id}}" class="btn btn-custom">
+                                <i class="bi bi-trash m-2"></i>Borrar Producto
+                            </a>
+                        {{/isOwner}}
+                        {{#admin}}
+                            <a href="/product/delete/{{product.id}}" class="btn btn-custom">
+                                <i class="bi bi-trash m-2"></i>Borrar Producto
+                            </a>
+                        {{/admin}}
+                        {{^admin}}
+                        {{^isOwner}}
+                            <button class="btn btn-custom"><i class="bi bi-chat-fill m-2"></i>Contactar con el vendedor</button>
+                                {{^isFavorite}}
+                                    <form action="/product/{{product.id}}/addFavorite" method="post">
+                                        <button type="submit" class="btn btn-custom">
+                                            <i class="bi bi-heart m-2" style="color: white;"></i>Añadir a favoritos
+                                        </button>
+                                        <input type="hidden" name="_csrf" value="{{token}}"/>
+                                    </form>
+                                {{/isFavorite}}
+                                {{#isFavorite}}
+                                    <form action="/product/{{product.id}}/eliminateFavorite" method="post">
+                                        <button type="submit" class="btn btn-custom">
+                                            <i class="bi bi-heart-fill m-2" style="color: white;"></i>Eliminar de favoritos
+                                        </button>
+                                        <input type="hidden" name="_csrf" value="{{token}}"/>
+                                    </form>
+                                {{/isFavorite}}
+                        {{/isOwner}}
+                        {{/admin}}
+                    </div>
                 </div>
             </div>
         </div>
