--- a/ByteMarket/backend/src/main/resources/templates/navbar_home.html
+++ b/ByteMarket/backend/src/main/resources/templates/navbar_home.html
@@ -1,17 +1,18 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5 navbarContent">
         <a class="navbar-brand" href="/">Inicio</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
+                class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link" href="#">Móviles</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Ordenadores</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Tablets</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Auriculares</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">SmartWatches</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Otros</a></li>
+                <li class="nav-item"><a class="nav-link" href="/products?category=Móviles">Móviles</a></li>
+                <li class="nav-item"><a class="nav-link" href="/products?category=Ordenadores">Ordenadores</a></li>
+                <li class="nav-item"><a class="nav-link" href="/products?category=Tablets">Tablets</a></li>
+                <li class="nav-item"><a class="nav-link" href="/products?category=Auriculares">Auriculares</a></li>
+                <li class="nav-item"><a class="nav-link" href="/products?category=SmartWatches">SmartWatches</a></li>
+                <li class="nav-item"><a class="nav-link" href="/products?category=Otros">Otros</a></li>
+
         </div>
     </div>
 </nav>
