--- a/ByteMarket/backend/src/main/resources/templates/newProduct.html
+++ b/ByteMarket/backend/src/main/resources/templates/newProduct.html
@@ -58,9 +58,11 @@
                 </button>
             </div>
             <div class="col-md-6">
-                <button type="button" class="btn btn-outline-dark btn-custom w-100">
-                    <i class="bi bi-x-circle"></i> Cancelar
-                </button>
+                <a href="/" class="w-100">
+                    <button type="button" class="btn btn-outline-dark btn-custom w-100">
+                        <i class="bi bi-x-circle"></i> Cancelar
+                    </button>
+                </a>
             </div>
         </div>
     </form>    
