Editable name and password

--- a/ByteMarket/backend/src/main/resources/templates/editProfile.html
+++ b/ByteMarket/backend/src/main/resources/templates/editProfile.html
@@ -43,7 +43,7 @@
             </div>
             <div class="mb-3 text-start">
                 <label class="form-label">Correo</label>
-                <input type="email" class="form-control" value="{{user.mail}}" title="Correo" name="mail">
+                <input type="email" class="form-control" value="{{user.mail}}" title="Correo" name="mail" disabled>
             </div>
             <div class="mb-3 text-start">
                 <label class="form-label">Ubicación</label>
@@ -51,7 +51,7 @@
             </div>
             <div class="mb-3 text-start">
                 <label class="form-label">Nueva Contraseña</label>
-                <input type="password" class="form-control" title="Contraseña" name="pass">
+                <input type="password" class="form-control" title="Contraseña" name="newPass">
             </div>
             <div class="mb-3 text-start">
                 <label class="form-label">Confirmar Contraseña</label>
