--- a/ByteMarket/backend/src/main/resources/templates/editProfile.html
+++ b/ByteMarket/backend/src/main/resources/templates/editProfile.html
@@ -45,10 +45,12 @@
                 <label class="form-label">Correo</label>
                 <input type="email" class="form-control" value="{{user.mail}}" title="Correo" name="mail" disabled>
             </div>
+            {{^admin}} <!--Not for admin-->
             <div class="mb-3 text-start">
                 <label class="form-label">Ubicación</label>
                 <input type="text" class="form-control" value="Madrid, España" title="Ubicacion" name="location">
             </div>
+            {{/admin}}
             <div class="mb-3 text-start">
                 <label class="form-label">Nueva Contraseña</label>
                 <input type="password" class="form-control" title="Contraseña" name="newPass">
