--- a/ByteMarket/backend/src/main/resources/templates/profile_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/profile_template.html
@@ -20,7 +20,9 @@
 <body>
     {{>header}}
 
-    {{>navbar_profile}}
+    {{^admin}} <!--Only shown for users, not for admin-->
+        {{>navbar_profile}}
+    {{/admin}}
 
     {{#showProfileSection}}
     <section class="py-4">
@@ -42,7 +44,8 @@
                         </span>
                     </a>
                 </div>                    
-                        
+                 
+                {{^admin}}
                 <form>
                     <div class="mb-3 text-start">
                         <h5 class="fw-bolder">Ubicación: {{location}}</h5>
@@ -57,6 +60,7 @@
                         <h5 class="fw-bolder">Valoraciones: <num class="fw-normal">{{reviewsNumber}}</num></h5>
                     </div>
                 </form>
+                {{/admin}}
                 <div>
                     <form action="/logout" method="POST">
                         <button class="btn btn-custom" type="submit">
@@ -69,11 +73,12 @@
         </div>
     </section>
     {{/showProfileSection}}
+    
+    {{^admin}} <!--Only shown for users, not for admin-->    
+        {{>showProducts_template}}
+    {{/admin}}
 
-    {{>showProducts_template}}
-
-
-    <footer class="bg-dark text-white text-center py-2">ByteMarket</footer>
+    {{>footer}}
 
 </body>
 
