create chat (without messages)

--- a/ByteMarket/backend/src/main/resources/templates/header.html
+++ b/ByteMarket/backend/src/main/resources/templates/header.html
@@ -87,7 +87,7 @@
                 </div>
                 <div>
                     <button class="btn btn-outline-dark btn-custom headerButton" type="button"
-                        onclick="window.location.href='/chats'">
+                        onclick="window.location.href='/chat'">
                         <i class="bi bi-chat-fill"></i>
                         <span class="fav-sellText">Chats</span>
                     </button>
