--- a/ByteMarket/backend/src/main/resources/templates/chat_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/chat_template.html
@@ -10,73 +10,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../public/profileStyle.css">
-    <link rel="stylesheet" href="../public/headerStyle.css">
+    <link rel="stylesheet" href="/css/profileStyle.css">
+    <link rel="stylesheet" href="/css/headerStyle.css">
     <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
     <title>{{title}}</title>
 </head>
 
 <body>
-    <header class="bg-dark py-2">
-        <div class="container-fluid px-0">
-            <div class="row align-items-center headerContainer">
-
-                <div class="col-2 d-flex align-items-center text-white header-logo">
-                    <a href="../views/home.html" class="d-flex align-items-center text-white text-decoration-none">
-                        <img src="{{favicon}}" alt="Logo" width="40" height="40" class="me-2">
-                        <h5 class="fw-bolder mb-0">{{site_name}}</h5>
-                    </a>
-                </div>
-                
-
-
-                <div class="col-5 searchContainer">
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Buscar">
-                        <button class="btn btn-outline-dark btn-custom" type="submit" title="Buscar">
-                            <i class="bi bi-search" style="color: white;"></i>
-                        </button>
-                    </form>
-                </div>
-
-                <div class="col-3 m-0 justify-content-center headerButtons">
-                    {{#header_buttons}}
-                    <div>
-                        <button class="btn btn-outline-dark btn-custom headerButton" type="button" onclick="window.location.href='{{url}}'">
-                            <i class="{{icon}}"></i>
-                            <span class="fav-sellText">{{text}}</span>
-                        </button>
-                    </div>
-                    {{/header_buttons}}
-                </div>
-
-                <div class="col-2 header-profile" height="55">
-                    <a href="../views/profile.html" class="d-flex align-items-center text-decoration-none">
-                        <div>
-                            <img class="profilePic" src="../public/defaul-pfp.jpg" alt="Logo">
-                        </div>
-                        <div>
-                            <p class="text-white fw-bolder mb-0">{{user_name}}</p>
-                        </div>
-                    </a>
-                </div>                
-            </div>
-        </div>
-    </header>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#">Mensajes</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                </ul>
-            </div>
-        </div>
-    </nav>
-
+    {{>header}}
+    
     <div class="container mt-4">
         <div class="row">
             <div class="col-md-4 border-end" style="height: 80vh; overflow-y: auto;">
@@ -84,21 +26,20 @@
                 <ul class="list-group">
                     {{#chats}}
                     <li class="list-group-item d-flex align-items-center">
-                        <img src="{{profile_image}}" alt="{{name}}" class="me-3" width="40" height="40">
-                        <div>
-                            <a href="#" class="text-decoration-none">{{name}}</a>
-                            <p class="text-muted mb-0 small">Último mensaje: {{last_message_time}}</p>
-                        </div>
+                        <form action="/chat/{{id}}" method="GET">
+                            <button type="submit" class="btn btn-link text-decoration-none">
+                                <i class="text-decoration-none"></i>{{product.name}}
+                            </button>
+                        </form>
                     </li>
                     {{/chats}}
                 </ul>
             </div>
             
-
+            {{#current_chat}}
             <div class="col-md-8 d-flex flex-column" style="height: 80vh;">
                 <div class="p-3 border-bottom">
                     <h5>{{current_chat_name}}</h5>
-                    <p class="text-muted mb-0">{{current_chat_date}}</p>
                 </div>
 
                 <div class="flex-grow-1 p-3 overflow-auto" style="background-color: #f8f9fa;">
@@ -122,10 +63,11 @@
                     </div>
                 </div>
             </div>
+            {{/current_chat}}
         </div>
     </div>
 
-    <footer class="bg-dark text-white text-center py-2">{{footer_text}}</footer>
+    {{>footer}}
 
 </body>
 
