--- a/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
@@ -50,7 +50,12 @@
                         {{/admin}}
                         {{^admin}}
                         {{^isOwner}}
-                            <button class="btn btn-custom"><i class="bi bi-chat-fill m-2"></i>Contactar con el vendedor</button>
+                        <form action="/chat/new/{{product.id}}" method="POST">
+                            <button type="submit" class="btn btn-custom">
+                                <i class="bi bi-chat-fill m-2"></i>Contactar con el vendedor
+                            </button>
+                            <input type="hidden" name="_csrf" value="{{token}}" />
+                        </form>                      
                                 {{^isFavorite}}
                                     <form action="/product/{{product.id}}/addFavorite" method="post">
                                         <button type="submit" class="btn btn-custom">
