--- a/ByteMarket/backend/src/main/resources/templates/profile_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/profile_template.html
@@ -33,12 +33,12 @@
     
                 <div class="profile-pic-wrapper">
                     <a href="/editProfile" class="d-inline-block position-relative">
-                        {{#image}}
-                        <img class="profile-pic mb-3" src="/user/{{id}}/image" alt="pfp">
-                        {{/image}}
-                        {{^image}}
+                        {{#user.image}}
+                        <img class="profile-pic mb-3" src="/user/image/{{user.id}}" alt="pfp">
+                        {{/user.image}}
+                        {{^user.image}}
                         <img class="profile-pic mb-3" src="/images/default_pfp.jpg" alt="pfp">
-                        {{/image}}
+                        {{/user.image}}
                         <span class="edit-icon">
                             <img src="https://cdn-icons-png.flaticon.com/512/1250/1250615.png" alt="Editar">
                         </span>
@@ -64,7 +64,7 @@
                 <div>
                     <form action="/logout" method="POST">
                         <button class="btn btn-custom" type="submit">
-                            <span class="fav-sellText">Cerrar Sesión</span>
+                            <span>Cerrar Sesión</span>
                         </button>
                         <input type="hidden" name="_csrf" value="{{token}}"/>
                     </form>
