--- a/ByteMarket/backend/src/main/resources/static/css/profileStyle.css
+++ b/ByteMarket/backend/src/main/resources/static/css/profileStyle.css
@@ -16,3 +16,11 @@
     max-width: 25%;
     min-width: 175px;
 }
+
+.map-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-top: 20px;
+}
