--- a/ByteMarket/backend/src/main/resources/templates/profile_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/profile_template.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -21,7 +22,7 @@
     {{>header}}
 
     {{^admin}} <!--Only shown for users, not for admin-->
-        {{>navbar_profile}}
+    {{>navbar_profile}}
     {{/admin}}
 
     {{#showProfileSection}}
@@ -30,7 +31,7 @@
         <div class="container py-5">
             <div class="profile-container text-center">
                 <h2 class="mb-4">{{username}}</h2>
-    
+
                 <div class="profile-pic-wrapper">
                     <a href="/editProfile" class="d-inline-block position-relative">
                         {{#user.image}}
@@ -43,22 +44,28 @@
                             <img src="https://cdn-icons-png.flaticon.com/512/1250/1250615.png" alt="Editar">
                         </span>
                     </a>
-                </div>                    
-                 
+                </div>
+
                 {{^admin}}
                 <form>
                     <div class="mb-3 text-start">
-                        <h5 class="fw-bolder">Ubicación: {{location}}</h5>
+                        <h5 class="fw-bolder">Ventas: <num class="fw-normal">{{salesNumber}}</num>
+                        </h5>
                     </div>
                     <div class="mb-3 text-start">
-                        <h5 class="fw-bolder">Ventas: <num class="fw-normal">{{salesNumber}}</num></h5>
+                        <h5 class="fw-bolder">Compras: <num class="fw-normal">{{purchasesNumber}}</num>
+                        </h5>
                     </div>
                     <div class="mb-3 text-start">
-                        <h5 class="fw-bolder">Compras: <num class="fw-normal">{{purchasesNumber}}</num></h5>
+                        <h5 class="fw-bolder">Valoraciones: <num class="fw-normal">{{reviewsNumber}}</num>
+                        </h5>
                     </div>
-                    <div class="mb-3 text-start">
-                        <h5 class="fw-bolder">Valoraciones: <num class="fw-normal">{{reviewsNumber}}</num></h5>
+                    {{#location}}
+                    <div class="mb-3 text-start" th:if="${location}">
+                        <h5 class="fw-bolder">Ubicación:</h5>
+                        <div class="map-container">{{{location}}}</div>
                     </div>
+                    {{/location}}
                 </form>
                 {{/admin}}
                 <div>
@@ -66,16 +73,16 @@
                         <button class="btn btn-custom" type="submit">
                             <span>Cerrar Sesión</span>
                         </button>
-                        <input type="hidden" name="_csrf" value="{{token}}"/>
+                        <input type="hidden" name="_csrf" value="{{token}}" />
                     </form>
-                </div>               
+                </div>
             </div>
         </div>
     </section>
     {{/showProfileSection}}
-    
-    {{^admin}} <!--Only shown for users, not for admin-->    
-        {{>showProducts_template}}
+
+    {{^admin}} <!--Only shown for users, not for admin-->
+    {{>showProducts_template}}
     {{/admin}}
 
     {{>footer}}
