Adjust map z-index

--- a/ByteMarket/backend/src/main/resources/templates/editProfile.html
+++ b/ByteMarket/backend/src/main/resources/templates/editProfile.html
@@ -55,7 +55,7 @@
             {{^admin}} <!--Not for admin-->
             <div class="mb-3 text-start">
                 <h2>Selecciona una ubicación</h2>
-                <div id="map"></div>
+                <div id="map" style="z-index: 0;"></div>
                 <input type="hidden" name="iframe" id="iframeCode">
             </div>
             {{/admin}}
