--- a/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
@@ -97,7 +97,7 @@
             <img src="/images/default_pfp.jpg" class="rounded-circle me-3 user-img" alt="Vendedor">
             {{/product.owner.image}}
 
-            
+
             <div>
                 <h5 class="mb-0">{{product.owner.name}}</h5>
                 <div>
@@ -110,19 +110,19 @@
         </div>
     </div>
     <hr>
-    <!-- {{#buyer}} solo se verá si es el que ha comprado el producto -->
     <div class="d-flex align-items-center justify-content-between mt-4">
         <h3>Reportar un Problema</h3>
         <button class="btn btn-custom" id="btn-report-issue">Añadir Reporte</button>
+        <input type="hidden" name="_csrf" value="{{token}}" />
     </div>
     <hr>
     <div id="report-form-container" class="mt-3 d-none">
         <div id="report-form">
             <h4>Detalles del Reporte</h4>
-            <form>
+            <form action="/product/{{product.id}}/newReport" method="POST">
                 <div class="mb-3">
-                    <label for="report-issue" class="form-label">Seleccionar Problema:</label>
-                    <select class="form-select" id="report-issue">
+                    <label for="reason" class="form-label">Seleccionar Problema:</label>
+                    <select class="form-select" id="report-issue" name="reason" required title="Selecciona el problema que deseas reportar">
                         <option value="damaged">Producto Dañado</option>
                         <option value="wrong-product">Producto Diferente</option>
                         <option value="missing-parts">Faltan Piezas</option>
@@ -130,21 +130,22 @@
                     </select>
                 </div>
                 <div class="mb-3">
-                    <label for="report-description" class="form-label">Descripción del Problema:</label>
-                    <textarea class="form-control" id="report-description" rows="3"
-                        placeholder="Describe el problema aquí..."></textarea>
+                    <label for="description" class="form-label">Descripción del Problema:</label>
+                    <textarea class="form-control" id="report-description" name="description" rows="3"
+                        placeholder="Describe el problema aquí..." required></textarea>
                 </div>
                 <button type="submit" class="btn btn-custom">Enviar Reporte</button>
+                <input type="hidden" name="_csrf" value="{{token}}" />
             </form>
         </div>
         <hr>
     </div>
+
     <script>
         document.getElementById("btn-report-issue").addEventListener("click", function () {
             document.getElementById("report-form-container").classList.toggle("d-none");
         });
     </script>
-    <!-- {{/buyer}} -->
     <hr>
     <div class="d-flex align-items-center justify-content-between mt-4">
         <h3>Valoraciones</h3>
