--- a/ByteMarket/backend/src/main/resources/templates/productByCategory.html
+++ b/ByteMarket/backend/src/main/resources/templates/productByCategory.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/css/homeStyle.css">
     <link rel="stylesheet" href="/css/headerStyle.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/js/loadMore.js"></script>
+    <script src="/js/loadMoreCategory.js"></script>
     <script src="/js/category.js"></script>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <title>ByteMarket</title>
@@ -54,6 +54,13 @@
                 </div>
                 {{/products}}
             </div>
+        </div> 
+                
+        <div class="d-flex justify-content-center">
+            <button class="btn btn-custom headerButton" id="load-more" type="button"
+                data-current-page="{{currentPage}}" data-total-pages="{{totalPages}}">
+                <span class="fav-sellText">Cargar más</span>
+            </button>
         </div>
     </section>
 
